# MonitorDevices-Server

./: .dockerignore  .env  .env.sample  .gitignore  .gitmodules  Dockerfile  README.md  bun.lockb  package-lock.json  package.json  processes.json  start.sh  tsconfig.json
analysis/inference/: CMakeLists.txt  compile_commands.json  converter.c  converter.h  main.c  main.cc  meson.build  tl_infer_agent.cc  tl_infer_agent.h
analysis/inference/.ccls-cache/@@home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@inference/: @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@allocation.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@allocation.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@array.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@array.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@builtin_ops.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@c@c_api.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@c@common.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@context_util.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@core@c@c_api.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@core@macros.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@core@model.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@graph_info.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@graph_info.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@interpreter.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@add.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@div.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@exp.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@if.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@mul.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@neg.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@pad.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@pow.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@kernels@sub.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@logger.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@logger.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@model.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@namespace.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@op_resolver.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@string_type.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@string_util.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@string_util.h.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@util.cc.blob  @home@mundus@base@esp@esp32_cam_surv_ai@server@analysis@tensorflow@tensorflow@lite@util.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno.h.blob  (+527 more)
rtsp_server_gstreamer/: CMakeLists.txt  main.c
(+1017 files in other folders)
